tests/sksl/errors/ArrayNegation.glsl
### Compilation failed:

error: 1: '-' cannot operate on 'int[123]'
error: 2: '-' cannot operate on 'int4[123]'
error: 3: '-' cannot operate on 'float[123]'
error: 4: '-' cannot operate on 'half3[123]'
error: 5: '-' cannot operate on 'bool2[123]'
error: 6: '-' cannot operate on 'half4x4[123]'
6 errors
